src/test/deca/context/valid/created/convFloat3.deca
// Description:
//    test de la conversion entier -> flottant
// Resultats:
//    ok

{
    int a = 1;
    if (a == 1.0) {
        print("ok") ;
    } else {
        print("ERRONE") ;
    }
}