src/test/deca/context/invalid/created/SansObjet/InvalidTypeInIf.deca
// Description:
//    Teste l'erreur de type dans une condition
// Resultats:
//    InvalidTypeInIf.deca:11:20: Error: Incompatible types for boolean operation: boolean || int

{
    if(true && false) {

    }
    else {
        if((2 == 2) || (1+1)) {
            println("ERRONE");
        }
    }
}